# mc2

./: .FederatedXGBoost.py.swp  .buildinfo  .clang-format  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FederatedXGBoost.py  README.md  config.html  genindex.html  index.html  install.html  mc2.py  mc2_client_env  objects.inv  opaquesql_usage.html  quickstart.html  requirements.txt  sample.py  search.html  searchindex.js  start_job.sh
.github/: dependabot.yml
.github/linters/: .arm-ttk.psd1  .jscpd.json
.github/workflows/: auto-pr.yml  docs.yml  main.yml  port.yml
_sources/: config.rst.txt  index.rst.txt  install.rst.txt  opaquesql_usage.rst.txt
_sources/cli/: index.rst.txt  usage.rst.txt
_sources/python/: api.rst.txt  index.rst.txt  usage.rst.txt
cli/: api.html  index.html  usage.html
client-docs/: README.md  conf.py  index.rst  install.rst  quickstart.rst  requirements.txt
client-docs/cli/: api.rst  index.rst  usage.rst
client-docs/config/: azure.rst  config.rst  index.rst
client-docs/python/: api.rst  index.rst  usage.rst
config/: azure.html  config.html  index.html
demo/: azure.yaml  config.yaml  mc2.yaml  opaque_sql_demo.scala  opaque_xgboost_demo.py  secure_xgboost_demo.py
demo/data/: opaquexgb.csv.train  securexgb_test.csv
demo/keys/: README.md  user1.crt  user1.pem  user1.pub
demo/opaquesql/: opaque_sql_demo.scala
demo/opaquesql/data/: opaquesql_schema.json
demo/single-party/opaquesql/: opaque_sql_demo.py
docs/: README.md  conf.py  config.rst  index.rst  install.rst  opaquesql_usage.rst  requirements.txt  spelling_wordlist.txt
docs/cli/: api.rst  index.rst  usage.rst
docs/config/: config.rst
docs/python/: api.rst  usage.rst
federated-xgboost/: .jnfxgb.py.swp  FederatedXGBoost.py  README.md  diagrams.md  hosts.config.sample  requirements.txt  start_job.sh
federated-xgboost/.ipynb_checkpoints/: rpc-tester-checkpoint.ipynb
federated-xgboost/camp/: jfxgb.py  rpc-tester.ipynb  sample_model.model  start_job.sh  xgb_test.py  xgb_train.py
federated-xgboost/camp/.ipynb_checkpoints/: rpc-tester-checkpoint.ipynb
federated-xgboost/docker/: Dockerfile  README.md  start_container.sh
federated-xgboost/images/: diagrams.md
federated-xgboost/risecamp/: camp.py  hosts.config  tutorial.ipynb  tutorial.py  tutorial_model.model
federated-xgboost/risecamp/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
federated-xgboost/sample/: .gitmodules  hosts.config  sample.py  sample.py.output  sample_model.model
python/: api.html  index.html  usage.html
python-package/: setup.py
python-package/mc2client/: __init__.py  cache.py  config.yaml  core.py  exceptions.py
python-package/mc2client/opaquesql/: __init__.py  opaquesql.py
python-package/mc2client/rpc/: README.md
python-package/mc2client/toolchain/: encrypt_and_upload.py  log_timer.py  mc2-schema.json  node_provider.py  tags.py  toolchain.py  updater.py  util.py
python-package/mc2client/xgb/: __init__.py  rabit.py  securexgboost.py
python-package/tests/: __init__.py  config.yaml  test.yaml  test_crypto.py  to_test_securexgboost.py
python-package/tests/azure/: create_azure_resources.py  delete_azure_resources.py
python-package/tests/data/: expected_booster.dump  test_data.csv  test_data.schema
python-package/tests/keys/: mc2_test_signing_key.pub  root.pub  user1.pem  user1.pub  user1_sym.key  user2.pub  user3.pub
quickstart/: azure.yaml  config.yaml  opaque_sql_demo.py  opaque_sql_demo.scala
quickstart/data/: opaquesql.csv
quickstart/keys/: root.crt  root.pem
sample/: hosts.config  sample.py  sample_model.model  start_job.sh
src/: CMakeLists.txt  attestation.cpp  attestation.h  c_api.cpp  context.h  crypto.h  io.cpp  io.h  utils.h
src/flatbuffers/: EncryptedBlock.fbs  Rows.fbs
src/include/: base64.h
(+15 files in other folders)
